--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/icon.png">
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Academia de Beleza - Girassol</title>
 
+</head>
+<header id="Inicio">
+    <!-- Cabeçalho -->
+    <div class="Container Flex">
+        <div id="logo">
+            <a href="index.html"><img src="img/logo.png" alt="Logotipo" href="index.html"></a>
+        </div>
+    <nav>
+            <!-- Menu retratil -->
+        <div class="desktop-menu">
+        <input type="checkbox" name="menu" id="check">
+        <label for="check">&#x268c;</label>
+        <ul>
+            <div class="menu-item"><li><a href="#Sobre">Sobre</a></li></div>
+            <div class="menu-item"><li><a href="#LOCAL">Localização</a></li></div>
+            <div class="menu-item"><li><a href="https://hotmart.com/pt-br/marketplace/produtos?initialSelectedCategory=&q=Miguel+Iugas" target="_blank">Mentorias e Cursos</a></li></div>
+            <div class="menu-item"><li><a href="https://api.whatsapp.com/send?phone=5511933058210&text=Olá%21%20Eu%20gostaria%20de%20agendar%20um%20atendimento%20com%20Dr.%20Miguel%20Iugas%20%5B2652%5D" target="_blank">Agendamento</a></li></div>
+            <div class="menu-item"><li><a href="#Contato">Contato</a></li></div>
+        </ul>
+        </div>
+    </nav>
+    </div>
+</header>
+<body>
+     <!-- Destaque -->
+    <main>
+        <div class="Container">
+            <a href="index.html"><img src="img/logo.png" alt="Academia de Beleza - Girassol" width="300px" height="150px" id="logobg"></a>
+        </div>
+    </main>
+     <!-- Slider - Destaques -->
+    <div class="hero-slider" carousel>
+        <div class="carousel-cell" style="background-image: url(img/foto.jpg);">
+            <div class="info-container">
+                <h3 class="header">Mentorias e Cursos</h3>
+                <h2 class="text">Aulas</h2>
+                <a href="https://hotmart.com/pt-br/marketplace/produtos?initialSelectedCategory=&q=Academia+Girassol" target="_blank"><button>Aprender Mais</button></a>
+            </div>
+        </div>
+        <div class="carousel-cell" style="background-image: url(img/fundo.jpg);">
+            <div class="info-container">
+                <h3 class="header">Agendamentos</h3>
+                <h2 class="text">Consultoria</h2>
+                <a href="https://api.whatsapp.com/send?phone=5511933058210&text=Olá%21%20Eu%20gostaria%20de%20agendar%20um%20atendimento%20com%20Dr.%20Miguel%20Iugas%20%5B2652%5D" target="_blank"><button >Agendamento Online</button></a>
+            </div>
+        </div>
+    </div>
+    <!-- Sobre -->
+    <section id="Sobre">   
+        <div class="Container Row">
+            <div class="foto" id="userpic">
+            </div>
+            <div class="content" id="animatedtxt">
+                <div class="destaqueSobre">
+                    <h1><strong>Academia de Beleza</strong></h1><br>
+                    <h3>Girassol  •  Beleza Integrativa</h3><br>
+                </div>
+                 <div class="textoSobre">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- nullpoint -->
+    <section id="null">
+        <div class="nullpoint">
+            <h2>Localização</h2><br>
+            <h3>Veja como chegar em nossa academia.</h3>
+        </div>
+    </section>
+    
+</body>
+<footer>
+    <!--- LOCALIZAÇÃO -->
+    <section id="LOCAL">
+        <div class="localy">
+            <div class="map">
+                <br>
+                <div class="maptitle">
+                    <br><h3>Unidade Campinas</h3><br>
+                    <div class="mapframe">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229.80588228712415!2d-47.13909829752078!3d-22.843406578635943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b91f8c592e15%3A0x9134d3d23298b319!2sEspa%C3%A7o%20Nobre%20Mirassol!5e0!3m2!1spt-BR!2sbr!4v1711383829225!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div><br>
+                    <h4>R. Irmão Robert Earl Hollingsworth - 08</h4>
+                    <h4>Jardim Mirassol</h4>
+                    <h4>Campinas/SP</h4>
+                    <h4>13069-502</h4><br>
+                </div>
+                <br>
+            </div>
+        </div>
+    </section>
+     <!-- CONTATOS -->
+     <section id="Contato1">
+        <div class="Container Flex2">
+            <div class="textoContato">
+                <a href="mailto:contato@academiagirassol.com.br?subject=SUPORTE"><img src="img/email.png" alt="Enviar e-mail">
+                <h3>contato@academiagirassol.com.br</h3></a><br><br>
+                <img src="img/fone.png" alt="Telefone"><h3>(19) 0800 0800</h3><br></a>
+            </div>
+        </div>
+    </section>
+    <section id="Contato">
+        <div class="Container  Flex4">
+            <a href="https://www.facebook.com/academiagirassol" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/academiagirassol/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
+        </div>
+    </section>
+    <!-- Final da pagina -->
+    <section id="Creditos">
+        <div class="Container">
+            <h3>© 2024 - Skyy Design</h3>
+        </div>
+    </section>
+</footer>
+</html>
