--- a/index.html
+++ b/index.html
@@ -123,4 +123,6 @@
         </div>
     </section>
 </footer>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <a href="#Inicio" id="topo"><img src="img/topicon.png" alt="Para o inicio"></a>
 </html>
