footer fixed, img do curso add, funcional (y)

--- a/index.html
+++ b/index.html
@@ -79,19 +79,17 @@
     </section>
     <section id="Cursos">   
         <div class="Container">
-            <!-- <div class="foto" id="userpic">
+            <div class="foto1" id="coursepic">
             </div>
-            <div class="content" id="animatedtxt"> -->
                 <div class="destaqueSobre1">
                     <h1><strong>Curso de Manicure e Pedicure</strong></h1><br>
-                    <h3>Semi-presencial</h3><br>
+                    <h3>Semi-presencial</h3>
                     <div class="textoSobre1">
                         <p>O curso de manicure da nossa academia oferece um conteúdo extenso com todos os detalhes para você começar sua carreira profissional na área.</p>
                         <p>Contando com uma professora presencial, te ajudamos a alcançar a excelência da profissão.</p>
                         <p>Com uma bagagem de mais de 20 anos, ela ja formou centenas de manicures e vai te ajudar no que for preciso para ser o profissional de sucesso que você almeja ser.</p>
                     </div>
                 </div>
-            </div>
         </div>
     </section>
     <!-- nullpoint -->
