fotos de destaque adicionadas e corrigidas, css fixado

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     </main>
      <!-- Slider - Destaques -->
     <div class="hero-slider" carousel>
-        <div class="carousel-cell" style="background-image: url(img/foto.jpg);">
+        <div class="carousel-cell" style="background-image: url(img/fotodestaquemanicure.jpg);">
             <div class="info-container">
-                <h3 class="header">Curso de Manicure</h3>
-                <h2 class="text">Aulas Presenciais</h2>
-                <a href="#Cursos"><button>Inscrever-se!</button></a>
+                <h3 class="header">Aulas Presenciais</h3>
+                <h2 class="text">Curso de Manicure</h2>
+                <a href="#Cursos"><button>Saiba mais!</button></a>
             </div>
         </div>
         <div class="carousel-cell" style="background-image: url(img/fundo.jpg);">
@@ -53,10 +53,10 @@
                 <a href="#Sobre"><button >Conheça mais!</button></a>
             </div>
         </div>
-        <div class="carousel-cell" style="background-image: url(img/fundo.jpg);">
+        <div class="carousel-cell" style="background-image: url(img/abertas.jpg);">
             <div class="info-container">
-                <h3 class="header">Pré-Inscrições</h3>
-                <h2 class="text">Inscreva-se já</h2>
+                <h3 class="header">Inscreva-se!</h3>
+                <h2 class="text">Design de Unhas</h2>
                 <a href="https://api.whatsapp.com/send?phone=5511933058210&text=Olá%21%20Eu%20gostaria%20de%20agendar%20um%20atendimento%20com%20Dr.%20Miguel%20Iugas%20%5B2652%5D" target="_blank"><button >Inscreva-se já!</button></a>
             </div>
         </div>
@@ -68,8 +68,9 @@
             </div>
             <div class="content" id="animatedtxt">
                 <div class="destaqueSobre">
-                    <h1><strong>Academia de Beleza</strong></h1><br>
-                    <h3>Girassol  •  Beleza Integrativa</h3><br>
+                    <h1><strong>Academia de Beleza</strong></h1>
+                    <h1><strong>• Girassol •</strong></h1><br>
+                    <h3>A beleza está dentro de você!</h3><br>
                 </div>
                  <div class="textoSobre">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
