icons modified, 'abertasbg' fixed, animations and effects added, desktop ok

--- a/index.html
+++ b/index.html
@@ -30,18 +30,21 @@
     </nav>
     </div>
 </header>
+<div class="line">
+
+</div>
 <body>
      <!-- Destaque -->
     <main>
         <div class="Container">
-            <a href="index.html"><img src="img/logob.png" alt="Academia de Beleza - Girassol" width="300px" height="150px" id="logobg"></a>
+            <a href="index.html"><img src="img/logow.png" alt="Academia de Beleza - Girassol" id="logobg"></a>
         </div>
     </main>
      <!-- Slider - Destaques -->
     <div class="hero-slider" carousel>
         <div class="carousel-cell" style="background-image: url(img/fotodestaquemanicure.jpg);">
             <div class="info-container">
-                <h3 class="header">Aulas Presenciais</h3>
+                <h3 class="header">Manicure e Pedicure</h3>
                 <h2 class="text">Curso de Manicure</h2>
                 <a href="#Cursos"><button>Saiba mais!</button></a>
             </div>
@@ -53,11 +56,11 @@
                 <a href="#Sobre"><button >Conheça mais!</button></a>
             </div>
         </div>
-        <div class="carousel-cell" style="background-image: url(img/abertas.jpg);">
+        <div class="carousel-cell" style="background-image: url(img/abertas.png);">
             <div class="info-container">
-                <h3 class="header">Inscreva-se!</h3>
+                <h3 class="header"> </h3>
                 <h2 class="text">Design de Unhas</h2>
-                <a href="https://api.whatsapp.com/send?phone=5511933058210&text=Olá%21%20Eu%20gostaria%20de%20agendar%20um%20atendimento%20com%20Dr.%20Miguel%20Iugas%20%5B2652%5D" target="_blank"><button >Inscreva-se já!</button></a>
+                <a href="https://api.whatsapp.com/send?phone=5511933058210&text=Olá%21%20Eu%20gostaria%20de%20agendar%20um%20atendimento%20com%20Dr.%20Miguel%20Iugas%20%5B2652%5D" target="_blank"><button >Inscrever-se</button></a>
             </div>
         </div>
     </div>
@@ -68,12 +71,16 @@
             </div>
             <div class="content" id="animatedtxt">
                 <div class="destaqueSobre">
-                    <h1><strong>Academia de Beleza</strong></h1>
-                    <h1><strong>• Girassol •</strong></h1><br>
-                    <h3>A beleza está dentro de você!</h3><br>
+                    <!-- <h1><strong>Academia de Beleza</strong></h1>
+                    <h1><strong>• Girassol •</strong></h1><br> -->
+                    <h3> </h3><br>
                 </div>
                  <div class="textoSobre">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Adentre neste vibrante universo ensolarado da <b><i>Academia de Beleza Girassol</i></b>, onde seus sonhos de se tornar um mestre na arte da beleza se tornam realidade! Aqui, não apenas cultivamos habilidades, mas também alimentamos sua confiança e paixão pelo mundo estético.
+                    Estamos empenhados em liberar seu potencial criativo e transformá-lo em um verdadeiro raio de sol na indústria da estética. <br>  Com uma ampla gama de cursos especializados em <b>manicure</b> e beleza em geral, preparamos um ambiente <b><i>vibrante</i></b> e <b><i>acolhedor</i></b>, onde a aprendizagem se torna uma jornada emocionante.                        
+                    <br>Nossos <b>instrutores altamente qualificados</b> são como raios de sol, irradiando conhecimento e técnica para que você brilhe em sua jornada de aprendizado. <br>Da manicure impecável às técnicas de maquiagem deslumbrantes, cada aluno aqui na Academia é uma <b><i>flor única</i></b>, pronta para desabrochar e conquistar o mundo da beleza.                        
+                    Ao nos escolher, você não apenas se inscreve em um curso, mas se torna parte de uma comunidade apaixonada e solidária de entusiastas da beleza. Nossas instalações modernas e <b>equipamentos de última geração</b> garantem que você tenha todas as ferramentas necessárias para florescer em sua jornada de aprendizado.                        
+                    <br>Então, se você está pronto para dar o primeiro passo em direção a uma <b>carreira emocionante e cheia de oportunidades</b> no mundo da beleza, junte-se a nós e venha fazer parte deste jardim de talentos, onde cada pétala é uma história de sucesso esperando para ser escrita.</p>
                 </div>
             </div>
         </div>
@@ -125,19 +132,20 @@
         <section id="Contato1">
             <div class="Container Flex2">
                 <div class="textoContato">
-                    <img src="img/fone.png" alt="Telefone"><h3>(19) 0800 0800</h3><br>
+                    <a href=""><img src="img/fone.png" alt="Telefone"><h3>(19) 0800 0800</h3></a><br>
                     <br>
+                    <a href="mailto:contato@academiagirassol.com.br?subject=SUPORTE" id="email"><img src="img/email.png" alt="Enviar e-mail">
+                    <h3>contato@academiagirassol.com.br</h3></a><br><br>
                     <section id="contact">
                         <div class="contact">
-                        <section id="Contato">
-                            <div class="Container  Flex4">
-                                <a href="https://www.facebook.com/academiagirassol" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
-                                <a href="https://www.instagram.com/academiagirassol/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
-                            </div>
-                        </section>
-                        <br>
-                    <a href="mailto:contato@academiagirassol.com.br?subject=SUPORTE"><img src="img/email.png" alt="Enviar e-mail">
-                    <h3>contato@academiagirassol.com.br</h3></a><br><br>
+                            <section id="Contato">
+                                <div class="Container  Flex4">
+                                    <a href="https://www.facebook.com/academiagirassol" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
+                                    <a href="https://www.instagram.com/academiagirassol/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
+                                </div>
+                            </section>
+                         </div>
+                    <br>
                 </div>
             </div>
         </section>
@@ -145,8 +153,13 @@
     </section>
 
     <!-- Final da pagina -->
+
     <section id="Creditos">
+        <div class="linebot">
+        
+        </div>
         <div class="Container">
+            <br><br>
             <h3>© 2024 - Skyy Design</h3>
         </div>
     </section>
