footer(creditos, contato) fixado

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         <section id="Contato1">
             <div class="Container Flex2">
                 <div class="textoContato">
-                    <a href=""><img src="img/fone.png" alt="Telefone"><h3>(19) 0800 0800</h3></a><br>
+                    <a href=""><img src="img/fone.png" alt="Telefone" id="telefone"><h3>(19) 0800 0800</h3></a><br>
                     <br>
-                    <a href="mailto:contato@academiagirassol.com.br?subject=SUPORTE" id="email"><img src="img/email.png" alt="Enviar e-mail">
+                    <a href="mailto:contato@academiagirassol.com.br?subject=SUPORTE"><img src="img/email.png" alt="Enviar e-mail" id="email">
                     <h3>contato@academiagirassol.com.br</h3></a><br><br>
                     <section id="contact">
                         <div class="contact">
