site em funcionamento

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="info-container">
                 <h3 class="header"> </h3>
                 <h2 class="text">Design de Unhas</h2>
-                <a href="https://api.whatsapp.com/send?phone=5511933058210&text=Olá%21%20Eu%20gostaria%20de%20agendar%20um%20atendimento%20com%20Dr.%20Miguel%20Iugas%20%5B2652%5D" target="_blank"><button >Inscrever-se</button></a>
+                <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá%21%20Eu%20gostaria%20de%20saber%20mais%20informações%20sobre%20o%20curso%20de%20%manicure%20%5B2652%5D" target="_blank"><button >Inscrever-se</button></a>
             </div>
         </div>
     </div>
@@ -93,11 +93,14 @@
                     <h1><strong>Curso de Manicure e Pedicure</strong></h1><br>
                     <h3>Semi-presencial</h3>
                     <div class="textoSobre1">
-                        <p>O curso de manicure da nossa academia oferece um conteúdo extenso com todos os detalhes para você começar sua carreira profissional na área.</p>
-                        <p>Contando com uma professora presencial, te ajudamos a alcançar a excelência da profissão.</p>
-                        <p>Com uma bagagem de mais de 20 anos, ela ja formou centenas de manicures e vai te ajudar no que for preciso para ser o profissional de sucesso que você almeja ser.</p>
+                        <h2>Descubra o caminho para se tornar um especialista em cuidados com as <span style="font-weight: bold;">mãos</span> e os <b><i>pés</i></b> com o nosso Curso de Manicure e Pedicure!</h2><br>
+                        <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, <br>combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p>
+                        <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> <br> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, <br>nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p>
+                        <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais <br> necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> <br> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p>
+                        <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> <br> e torne-se o profissional de sucesso que você sempre quis ser com o nosso Curso de Manicure e Pedicure.</p>
                     </div>
                 </div>
+            </div>
         </div>
     </section>
     <!-- nullpoint -->
@@ -129,6 +132,12 @@
 </body>
 <footer>
      <!-- CONTATOS -->
+     <div class="linebot2">
+        
+     </div>
+     <div class="fale">
+        <h3>Fale Conosco</h3>
+     </div>
         <section id="Contato1">
             <div class="Container Flex2">
                 <div class="textoContato">
