botão de inscrição adicionado

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="info-container">
                 <h3 class="header"> </h3>
                 <h2 class="text">Design de Unhas</h2>
-                <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá%21%20Eu%20gostaria%20de%20saber%20mais%20informações%20sobre%20o%20curso%20de%20%manicure%20%5B2652%5D" target="_blank"><button >Inscrever-se</button></a>
+                <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button >Inscrever-se</button></a>
             </div>
         </div>
     </div>
@@ -100,8 +100,7 @@
                         <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> <br> e torne-se o profissional de sucesso que você sempre quis ser com o nosso Curso de Manicure e Pedicure.</p>
                     </div>
                 </div>
-            </div>
-        </div>
+                <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
     </section>
     <!-- nullpoint -->
     <section id="null">
