responsividade smartphone portrait added

--- a/index.html
+++ b/index.html
@@ -85,20 +85,22 @@
             </div>
         </div>
     </section>
+    <div class="linemid">
+        
+    </div>
     <section id="Cursos">   
         <div class="Container">
-            <div class="foto1" id="coursepic">
+            <div class="foto2" id="coursepic">
             </div>
                 <div class="destaqueSobre1">
                     <h1><strong>Curso de Manicure e Pedicure</strong></h1><br>
-                    <h3>Semi-presencial</h3>
-                    <div class="textoSobre1">
-                        <h2>Descubra o caminho para se tornar um especialista em cuidados com as <span style="font-weight: bold;">mãos</span> e os <b><i>pés</i></b> com o nosso Curso de Manicure e Pedicure!</h2><br>
-                        <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, <br>combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p>
-                        <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> <br> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, <br>nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p>
-                        <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais <br> necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> <br> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p>
-                        <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> <br> e torne-se o profissional de sucesso que você sempre quis ser com o nosso Curso de Manicure e Pedicure.</p>
-                    </div>
+                    <h2>Descubra o caminho para se tornar um especialista em cuidados com as <span style="font-weight: bold;">mãos</span> e os <b><i>pés</i></b> com o nosso curso!</h2><br>
+                </div>
+                <div class="textoSobre1">
+                    <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, <br>combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p>
+                    <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> <br> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, <br>nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p>
+                    <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais <br> necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> <br> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p>
+                    <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> <br> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
                 </div>
                 <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
     </section>
@@ -117,7 +119,7 @@
                     <div class="maptitle">
                         <br><h3>Unidade Campinas</h3><br>
                         <div class="mapframe">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229.80588228712415!2d-47.13909829752078!3d-22.843406578635943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b91f8c592e15%3A0x9134d3d23298b319!2sEspa%C3%A7o%20Nobre%20Mirassol!5e0!3m2!1spt-BR!2sbr!4v1711383829225!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229.80588228712415!2d-47.13909829752078!3d-22.843406578635943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b91f8c592e15%3A0x9134d3d23298b319!2sEspa%C3%A7o%20Nobre%20Mirassol!5e0!3m2!1spt-BR!2sbr!4v1711383829225!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div><br>
                         <h4>R. Irmão Robert Earl Hollingsworth - 08</h4>
                         <h4>Jardim Mirassol</h4>
@@ -133,9 +135,6 @@
      <!-- CONTATOS -->
      <div class="linebot2">
         
-     </div>
-     <div class="fale">
-        <h3>Fale Conosco</h3>
      </div>
         <section id="Contato1">
             <div class="Container Flex2">
